--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/joi": "^15.1.1",
     "apollo-server": "^2.11.0",
     "apollo-server-koa": "^2.8.1",
+    "casual": "^1.6.2",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-scalars": "^1.0.2",
