--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node src/index.js"
+    "start": "node src/index.js",
+    "serve": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,8 @@
     "graphql": "^14.4.2",
     "graphql-scalars": "^1.0.2",
     "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
